# barbergest

./: Dockerfile  README.md  conta.json  docker-compose.yml  instrucoes.md
api/: .env.example  Cargo.toml
api/entity/: Cargo.toml
api/entity/src/: appointments.rs  cash_register.rs  client_appointments.rs  clients.rs  mod.rs  payments.rs  prelude.rs  products.rs  reports.rs  services.rs  staff.rs  user.rs
api/migration/src/: m20220101_000001_create_table.rs
api/src/: lib.rs  main.rs
api/src/handlers/: admin_handlers.rs  barber_handlers.rs  mod.rs  user_handlers.rs
api/src/models/: user_models.rs
api/src/routes/: admin_routes.rs  barber_routes.rs  mod.rs  user_routes.rs
api/src/utils/: api_error.rs  constants.rs  guards.rs  jwt.rs  mod.rs
backend/: .gitignore  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20250722223347_init/: migration.sql
backend/src/: app.ts  index.ts
backend/src/handlers/: admin.ts  barber.ts  user.ts
backend/src/models/: user.ts
backend/src/routes/: admin.ts  barber.ts  user.ts
backend/src/types/: prisma.d.ts
backend/src/types/express/: index.d.ts
backend/src/util/: apiErr.ts  constants.ts  database.ts  guards.ts  jwt.ts
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ButtonsDashboard.tsx  Nav.tsx  ThemeToggle.tsx
frontend/src/pages/: BarberHome.tsx  Home.tsx  Layout.tsx  Login.tsx  Register.tsx
frontend/src/pages/auth/: Payment.tsx  Register.tsx
(+5 files in other folders)
