[package]
name = "api"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]


[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-macros = "0.5.0"
dotenvy = "0.15.7"
include_dir = "0.7.4"
reqwest = { version = "0.12.20", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "limit"] }
tracing-subscriber = "0.3.19"
typeshare = "1.0.0"
rand = "0.9.1"
bcrypt = "0.17.0"
chrono = "0.4.41"
jsonwebtoken = { version = "9.3.1", default-features = false }
lazy_static = "1.5.0"
sea-orm = { version = "1.1.13", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
entity = { path = "entity" }
migration = { path = "migration" }
uuid = { version = "1.17.0", features = ["v4"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures = "0.3.31"
